fixed large page and gap after footer before search

--- a/style.css
+++ b/style.css
@@ -143,24 +143,26 @@ img {
 }
 
 #bodyWrapper{
+    margin: -8px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-flow: column;
-    margin: -8px;
-    width: 100%;
     overflow-x: hidden;
     position: absolute;
 }
 
 footer {
+    margin: 8vh -8px -8px -8px;
+    padding-top: 8px;
     display: flex;
     flex-flow: column;
     align-content: flex-end;
     justify-content: flex-end;
+    vertical-align:bottom;
+    flex-shrink: 0;
     /*flex-grow: 1;*/
     /*margin-top: auto;*/
-    margin: 8vh -8px -8px -8px;
-    padding-top: 8px;
     text-align: center;
     font-family: sans-serif;
     background: #6da3b1;
@@ -175,8 +177,11 @@ footer img {
 }
 
 footer a {
+    margin: 0;
+    padding: 0;
     text-decoration: none;
 }
+
 @media screen and ( min-width: 1501px ) {
     header {font-size: 18px;}
     .card {flex-basis: 10%}
@@ -260,25 +265,37 @@ footer a {
 }
 
 @media only screen and (min-width: 451px) and (max-width: 950px) {
-    header {font-size: 16px;}
+    header {
+        font-size: 16px;
+        padding-top: 10px;
+    }
     .card {flex-basis: 30%;}
     #beforeSearch {
         flex: 1 0 auto;
     }
     #slider, #slider2 {
-        max-height: 600px;
+        max-height: 400px;
         opacity:0;
+    }
+    .startIcons {
+        display: none;
     }
 }
 
 @media screen and ( min-width: 200px ) and (max-width: 450px) {
-    header {font-size: 14px;}
+    header {
+        font-size: 14px;
+        padding-top: 10px;
+    }
     .card {flex-basis: 100%;}
     #beforeSearch {
         flex: 1 0 auto;
     }
     #slider, #slider2 {
-        max-height: 600px;
+        max-height: 400px;
         opacity:0;
+    }
+    .startIcons {
+        display: none;
     }
 }
